compiler/parser.output
Terminals unused in grammar

   ERROR


Grammatica

    0 $accept: program $end

    1 program: PROGRAM stat_list END

    2 stat_list: stat ';' stat_list
    3          | stat

    4 stat: def_stat
    5     | assign_stat
    6     | if_stat
    7     | while_stat
    8     | read_stat
    9     | write_stat

   10 def_stat: type id_list

   11 @1: /* vuoto */

   12 id_list: ID @1 ',' id_list
   13        | ID

   14 type: atomic_type
   15     | table_type

   16 atomic_type: INTEGER
   17            | STRING
   18            | BOOLEAN

   19 table_type: TABLE '(' attr_list ')'

   20 attr_list: attr_decl ',' attr_list
   21          | attr_decl

   22 attr_decl: atomic_type ID

   23 @2: /* vuoto */

   24 assign_stat: ID @2 '=' expr

   25 expr: expr bool_op bool_term
   26     | bool_term

   27 bool_op: AND
   28        | OR

   29 bool_term: comp_term comp_op comp_term
   30          | comp_term

   31 comp_op: EQ
   32        | NE
   33        | '>'
   34        | GE
   35        | '<'
   36        | LE

   37 comp_term: comp_term low_bin_op low_term
   38          | low_term

   39 low_bin_op: '+'
   40           | '-'

   41 low_term: low_term high_bin_op factor
   42         | factor

   43 high_bin_op: '*'
   44            | '/'
   45            | join_op

   46 factor: unary_op factor
   47       | '(' expr ')'
   48       | ID
   49       | const

   50 unary_op: '-'
   51         | NOT
   52         | project_op
   53         | select_op
   54         | exists_op
   55         | all_op
   56         | update_op
   57         | extend_op
   58         | rename_op

   59 join_op: JOIN '[' expr ']'

   60 project_op: PROJECT '[' id_list ']'

   61 select_op: SELECT '[' expr ']'

   62 exists_op: EXISTS '[' expr ']'

   63 all_op: ALL '[' expr ']'

   64 @3: /* vuoto */

   65 update_op: UPDATE '[' ID @3 '=' expr ']'

   66 @4: /* vuoto */

   67 extend_op: EXTEND '[' atomic_type ID @4 '=' expr ']'

   68 rename_op: RENAME '[' id_list ']'

   69 const: atomic_const
   70      | table_const

   71 atomic_const: INTCONST
   72             | STRCONST
   73             | BOOLCONST

   74 table_const: '{' table_instance '}'

   75 table_instance: tuple_list
   76               | atomic_type_list

   77 tuple_list: tuple_const ',' tuple_list
   78           | tuple_const

   79 tuple_const: '(' atomic_const_list ')'

   80 atomic_const_list: atomic_const ',' atomic_const_list
   81                  | atomic_const

   82 atomic_type_list: atomic_type ',' atomic_type_list
   83                 | atomic_type

   84 if_stat: IF expr THEN stat_list else_part END

   85 else_part: ELSE stat_list
   86          | /* vuoto */

   87 while_stat: WHILE expr DO stat_list END

   88 read_stat: READ specifier ID

   89 specifier: '[' expr ']'
   90          | /* vuoto */

   91 write_stat: WRITE specifier expr


Simboli terminali e regole in cui appaiono

$end (0) 0
'(' (40) 19 47 79
')' (41) 19 47 79
'*' (42) 43
'+' (43) 39
',' (44) 12 20 77 80 82
'-' (45) 40 50
'/' (47) 44
';' (59) 2
'<' (60) 35
'=' (61) 24 65 67
'>' (62) 33
'[' (91) 59 60 61 62 63 65 67 68 89
']' (93) 59 60 61 62 63 65 67 68 89
'{' (123) 74
'}' (125) 74
error (256)
ALL (258) 63
AND (259) 27
BOOLCONST (260) 73
BOOLEAN (261) 18
DO (262) 87
ELSE (263) 85
END (264) 1 84 87
EQ (265) 31
ERROR (266)
EXISTS (267) 62
EXTEND (268) 67
GE (269) 34
ID (270) 12 13 22 24 48 65 67 88
IF (271) 84
INTCONST (272) 71
INTEGER (273) 16
JOIN (274) 59
LE (275) 36
NE (276) 32
NOT (277) 51
OR (278) 28
PROGRAM (279) 1
PROJECT (280) 60
READ (281) 88
RENAME (282) 68
SELECT (283) 61
STRCONST (284) 72
STRING (285) 17
TABLE (286) 19
THEN (287) 84
UPDATE (288) 65
WHILE (289) 87
WRITE (290) 91


Simboli nonterminali e regole in cui appaiono

$accept (51)
    nel primo membro: 0
program (52)
    nel primo membro: 1, nel secondo membro: 0
stat_list (53)
    nel primo membro: 2 3, nel secondo membro: 1 2 84 85 87
stat (54)
    nel primo membro: 4 5 6 7 8 9, nel secondo membro: 2 3
def_stat (55)
    nel primo membro: 10, nel secondo membro: 4
id_list (56)
    nel primo membro: 12 13, nel secondo membro: 10 12 60 68
@1 (57)
    nel primo membro: 11, nel secondo membro: 12
type (58)
    nel primo membro: 14 15, nel secondo membro: 10
atomic_type (59)
    nel primo membro: 16 17 18, nel secondo membro: 14 22 67 82 83
table_type (60)
    nel primo membro: 19, nel secondo membro: 15
attr_list (61)
    nel primo membro: 20 21, nel secondo membro: 19 20
attr_decl (62)
    nel primo membro: 22, nel secondo membro: 20 21
assign_stat (63)
    nel primo membro: 24, nel secondo membro: 5
@2 (64)
    nel primo membro: 23, nel secondo membro: 24
expr (65)
    nel primo membro: 25 26, nel secondo membro: 24 25 47 59 61 62
    63 65 67 84 87 89 91
bool_op (66)
    nel primo membro: 27 28, nel secondo membro: 25
bool_term (67)
    nel primo membro: 29 30, nel secondo membro: 25 26
comp_op (68)
    nel primo membro: 31 32 33 34 35 36, nel secondo membro: 29
comp_term (69)
    nel primo membro: 37 38, nel secondo membro: 29 30 37
low_bin_op (70)
    nel primo membro: 39 40, nel secondo membro: 37
low_term (71)
    nel primo membro: 41 42, nel secondo membro: 37 38 41
high_bin_op (72)
    nel primo membro: 43 44 45, nel secondo membro: 41
factor (73)
    nel primo membro: 46 47 48 49, nel secondo membro: 41 42 46
unary_op (74)
    nel primo membro: 50 51 52 53 54 55 56 57 58, nel secondo membro:
    46
join_op (75)
    nel primo membro: 59, nel secondo membro: 45
project_op (76)
    nel primo membro: 60, nel secondo membro: 52
select_op (77)
    nel primo membro: 61, nel secondo membro: 53
exists_op (78)
    nel primo membro: 62, nel secondo membro: 54
all_op (79)
    nel primo membro: 63, nel secondo membro: 55
update_op (80)
    nel primo membro: 65, nel secondo membro: 56
@3 (81)
    nel primo membro: 64, nel secondo membro: 65
extend_op (82)
    nel primo membro: 67, nel secondo membro: 57
@4 (83)
    nel primo membro: 66, nel secondo membro: 67
rename_op (84)
    nel primo membro: 68, nel secondo membro: 58
const (85)
    nel primo membro: 69 70, nel secondo membro: 49
atomic_const (86)
    nel primo membro: 71 72 73, nel secondo membro: 69 80 81
table_const (87)
    nel primo membro: 74, nel secondo membro: 70
table_instance (88)
    nel primo membro: 75 76, nel secondo membro: 74
tuple_list (89)
    nel primo membro: 77 78, nel secondo membro: 75 77
tuple_const (90)
    nel primo membro: 79, nel secondo membro: 77 78
atomic_const_list (91)
    nel primo membro: 80 81, nel secondo membro: 79 80
atomic_type_list (92)
    nel primo membro: 82 83, nel secondo membro: 76 82
if_stat (93)
    nel primo membro: 84, nel secondo membro: 6
else_part (94)
    nel primo membro: 85 86, nel secondo membro: 84
while_stat (95)
    nel primo membro: 87, nel secondo membro: 7
read_stat (96)
    nel primo membro: 88, nel secondo membro: 8
specifier (97)
    nel primo membro: 89 90, nel secondo membro: 88 91
write_stat (98)
    nel primo membro: 91, nel secondo membro: 9


stato 0

    0 $accept: . program $end

    PROGRAM  shift e prosecuzione allo stato 1

    program  prosecuzione allo stato 2


stato 1

    1 program: PROGRAM . stat_list END

    BOOLEAN  shift e prosecuzione allo stato 3
    ID       shift e prosecuzione allo stato 4
    IF       shift e prosecuzione allo stato 5
    INTEGER  shift e prosecuzione allo stato 6
    READ     shift e prosecuzione allo stato 7
    STRING   shift e prosecuzione allo stato 8
    TABLE    shift e prosecuzione allo stato 9
    WHILE    shift e prosecuzione allo stato 10
    WRITE    shift e prosecuzione allo stato 11

    stat_list    prosecuzione allo stato 12
    stat         prosecuzione allo stato 13
    def_stat     prosecuzione allo stato 14
    type         prosecuzione allo stato 15
    atomic_type  prosecuzione allo stato 16
    table_type   prosecuzione allo stato 17
    assign_stat  prosecuzione allo stato 18
    if_stat      prosecuzione allo stato 19
    while_stat   prosecuzione allo stato 20
    read_stat    prosecuzione allo stato 21
    write_stat   prosecuzione allo stato 22


stato 2

    0 $accept: program . $end

    $end  shift e prosecuzione allo stato 23


stato 3

   18 atomic_type: BOOLEAN .

    $default  riduzione con la regola 18 (atomic_type)


stato 4

   24 assign_stat: ID . @2 '=' expr

    $default  riduzione con la regola 23 (@2)

    @2  prosecuzione allo stato 24


stato 5

   84 if_stat: IF . expr THEN stat_list else_part END

    ALL        shift e prosecuzione allo stato 25
    BOOLCONST  shift e prosecuzione allo stato 26
    EXISTS     shift e prosecuzione allo stato 27
    EXTEND     shift e prosecuzione allo stato 28
    ID         shift e prosecuzione allo stato 29
    INTCONST   shift e prosecuzione allo stato 30
    NOT        shift e prosecuzione allo stato 31
    PROJECT    shift e prosecuzione allo stato 32
    RENAME     shift e prosecuzione allo stato 33
    SELECT     shift e prosecuzione allo stato 34
    STRCONST   shift e prosecuzione allo stato 35
    UPDATE     shift e prosecuzione allo stato 36
    '('        shift e prosecuzione allo stato 37
    '-'        shift e prosecuzione allo stato 38
    '{'        shift e prosecuzione allo stato 39

    expr          prosecuzione allo stato 40
    bool_term     prosecuzione allo stato 41
    comp_term     prosecuzione allo stato 42
    low_term      prosecuzione allo stato 43
    factor        prosecuzione allo stato 44
    unary_op      prosecuzione allo stato 45
    project_op    prosecuzione allo stato 46
    select_op     prosecuzione allo stato 47
    exists_op     prosecuzione allo stato 48
    all_op        prosecuzione allo stato 49
    update_op     prosecuzione allo stato 50
    extend_op     prosecuzione allo stato 51
    rename_op     prosecuzione allo stato 52
    const         prosecuzione allo stato 53
    atomic_const  prosecuzione allo stato 54
    table_const   prosecuzione allo stato 55


stato 6

   16 atomic_type: INTEGER .

    $default  riduzione con la regola 16 (atomic_type)


stato 7

   88 read_stat: READ . specifier ID

    '['  shift e prosecuzione allo stato 56

    $default  riduzione con la regola 90 (specifier)

    specifier  prosecuzione allo stato 57


stato 8

   17 atomic_type: STRING .

    $default  riduzione con la regola 17 (atomic_type)


stato 9

   19 table_type: TABLE . '(' attr_list ')'

    '('  shift e prosecuzione allo stato 58


stato 10

   87 while_stat: WHILE . expr DO stat_list END

    ALL        shift e prosecuzione allo stato 25
    BOOLCONST  shift e prosecuzione allo stato 26
    EXISTS     shift e prosecuzione allo stato 27
    EXTEND     shift e prosecuzione allo stato 28
    ID         shift e prosecuzione allo stato 29
    INTCONST   shift e prosecuzione allo stato 30
    NOT        shift e prosecuzione allo stato 31
    PROJECT    shift e prosecuzione allo stato 32
    RENAME     shift e prosecuzione allo stato 33
    SELECT     shift e prosecuzione allo stato 34
    STRCONST   shift e prosecuzione allo stato 35
    UPDATE     shift e prosecuzione allo stato 36
    '('        shift e prosecuzione allo stato 37
    '-'        shift e prosecuzione allo stato 38
    '{'        shift e prosecuzione allo stato 39

    expr          prosecuzione allo stato 59
    bool_term     prosecuzione allo stato 41
    comp_term     prosecuzione allo stato 42
    low_term      prosecuzione allo stato 43
    factor        prosecuzione allo stato 44
    unary_op      prosecuzione allo stato 45
    project_op    prosecuzione allo stato 46
    select_op     prosecuzione allo stato 47
    exists_op     prosecuzione allo stato 48
    all_op        prosecuzione allo stato 49
    update_op     prosecuzione allo stato 50
    extend_op     prosecuzione allo stato 51
    rename_op     prosecuzione allo stato 52
    const         prosecuzione allo stato 53
    atomic_const  prosecuzione allo stato 54
    table_const   prosecuzione allo stato 55


stato 11

   91 write_stat: WRITE . specifier expr

    '['  shift e prosecuzione allo stato 56

    $default  riduzione con la regola 90 (specifier)

    specifier  prosecuzione allo stato 60


stato 12

    1 program: PROGRAM stat_list . END

    END  shift e prosecuzione allo stato 61


stato 13

    2 stat_list: stat . ';' stat_list
    3          | stat .

    ';'  shift e prosecuzione allo stato 62

    $default  riduzione con la regola 3 (stat_list)


stato 14

    4 stat: def_stat .

    $default  riduzione con la regola 4 (stat)


stato 15

   10 def_stat: type . id_list

    ID  shift e prosecuzione allo stato 63

    id_list  prosecuzione allo stato 64


stato 16

   14 type: atomic_type .

    $default  riduzione con la regola 14 (type)


stato 17

   15 type: table_type .

    $default  riduzione con la regola 15 (type)


stato 18

    5 stat: assign_stat .

    $default  riduzione con la regola 5 (stat)


stato 19

    6 stat: if_stat .

    $default  riduzione con la regola 6 (stat)


stato 20

    7 stat: while_stat .

    $default  riduzione con la regola 7 (stat)


stato 21

    8 stat: read_stat .

    $default  riduzione con la regola 8 (stat)


stato 22

    9 stat: write_stat .

    $default  riduzione con la regola 9 (stat)


stato 23

    0 $accept: program $end .

    $default  accetta


stato 24

   24 assign_stat: ID @2 . '=' expr

    '='  shift e prosecuzione allo stato 65


stato 25

   63 all_op: ALL . '[' expr ']'

    '['  shift e prosecuzione allo stato 66


stato 26

   73 atomic_const: BOOLCONST .

    $default  riduzione con la regola 73 (atomic_const)


stato 27

   62 exists_op: EXISTS . '[' expr ']'

    '['  shift e prosecuzione allo stato 67


stato 28

   67 extend_op: EXTEND . '[' atomic_type ID @4 '=' expr ']'

    '['  shift e prosecuzione allo stato 68


stato 29

   48 factor: ID .

    $default  riduzione con la regola 48 (factor)


stato 30

   71 atomic_const: INTCONST .

    $default  riduzione con la regola 71 (atomic_const)


stato 31

   51 unary_op: NOT .

    $default  riduzione con la regola 51 (unary_op)


stato 32

   60 project_op: PROJECT . '[' id_list ']'

    '['  shift e prosecuzione allo stato 69


stato 33

   68 rename_op: RENAME . '[' id_list ']'

    '['  shift e prosecuzione allo stato 70


stato 34

   61 select_op: SELECT . '[' expr ']'

    '['  shift e prosecuzione allo stato 71


stato 35

   72 atomic_const: STRCONST .

    $default  riduzione con la regola 72 (atomic_const)


stato 36

   65 update_op: UPDATE . '[' ID @3 '=' expr ']'

    '['  shift e prosecuzione allo stato 72


stato 37

   47 factor: '(' . expr ')'

    ALL        shift e prosecuzione allo stato 25
    BOOLCONST  shift e prosecuzione allo stato 26
    EXISTS     shift e prosecuzione allo stato 27
    EXTEND     shift e prosecuzione allo stato 28
    ID         shift e prosecuzione allo stato 29
    INTCONST   shift e prosecuzione allo stato 30
    NOT        shift e prosecuzione allo stato 31
    PROJECT    shift e prosecuzione allo stato 32
    RENAME     shift e prosecuzione allo stato 33
    SELECT     shift e prosecuzione allo stato 34
    STRCONST   shift e prosecuzione allo stato 35
    UPDATE     shift e prosecuzione allo stato 36
    '('        shift e prosecuzione allo stato 37
    '-'        shift e prosecuzione allo stato 38
    '{'        shift e prosecuzione allo stato 39

    expr          prosecuzione allo stato 73
    bool_term     prosecuzione allo stato 41
    comp_term     prosecuzione allo stato 42
    low_term      prosecuzione allo stato 43
    factor        prosecuzione allo stato 44
    unary_op      prosecuzione allo stato 45
    project_op    prosecuzione allo stato 46
    select_op     prosecuzione allo stato 47
    exists_op     prosecuzione allo stato 48
    all_op        prosecuzione allo stato 49
    update_op     prosecuzione allo stato 50
    extend_op     prosecuzione allo stato 51
    rename_op     prosecuzione allo stato 52
    const         prosecuzione allo stato 53
    atomic_const  prosecuzione allo stato 54
    table_const   prosecuzione allo stato 55


stato 38

   50 unary_op: '-' .

    $default  riduzione con la regola 50 (unary_op)


stato 39

   74 table_const: '{' . table_instance '}'

    BOOLEAN  shift e prosecuzione allo stato 3
    INTEGER  shift e prosecuzione allo stato 6
    STRING   shift e prosecuzione allo stato 8
    '('      shift e prosecuzione allo stato 74

    atomic_type       prosecuzione allo stato 75
    table_instance    prosecuzione allo stato 76
    tuple_list        prosecuzione allo stato 77
    tuple_const       prosecuzione allo stato 78
    atomic_type_list  prosecuzione allo stato 79


stato 40

   25 expr: expr . bool_op bool_term
   84 if_stat: IF expr . THEN stat_list else_part END

    AND   shift e prosecuzione allo stato 80
    OR    shift e prosecuzione allo stato 81
    THEN  shift e prosecuzione allo stato 82

    bool_op  prosecuzione allo stato 83


stato 41

   26 expr: bool_term .

    $default  riduzione con la regola 26 (expr)


stato 42

   29 bool_term: comp_term . comp_op comp_term
   30          | comp_term .
   37 comp_term: comp_term . low_bin_op low_term

    EQ   shift e prosecuzione allo stato 84
    GE   shift e prosecuzione allo stato 85
    LE   shift e prosecuzione allo stato 86
    NE   shift e prosecuzione allo stato 87
    '>'  shift e prosecuzione allo stato 88
    '<'  shift e prosecuzione allo stato 89
    '+'  shift e prosecuzione allo stato 90
    '-'  shift e prosecuzione allo stato 91

    $default  riduzione con la regola 30 (bool_term)

    comp_op     prosecuzione allo stato 92
    low_bin_op  prosecuzione allo stato 93


stato 43

   38 comp_term: low_term .
   41 low_term: low_term . high_bin_op factor

    JOIN  shift e prosecuzione allo stato 94
    '*'   shift e prosecuzione allo stato 95
    '/'   shift e prosecuzione allo stato 96

    $default  riduzione con la regola 38 (comp_term)

    high_bin_op  prosecuzione allo stato 97
    join_op      prosecuzione allo stato 98


stato 44

   42 low_term: factor .

    $default  riduzione con la regola 42 (low_term)


stato 45

   46 factor: unary_op . factor

    ALL        shift e prosecuzione allo stato 25
    BOOLCONST  shift e prosecuzione allo stato 26
    EXISTS     shift e prosecuzione allo stato 27
    EXTEND     shift e prosecuzione allo stato 28
    ID         shift e prosecuzione allo stato 29
    INTCONST   shift e prosecuzione allo stato 30
    NOT        shift e prosecuzione allo stato 31
    PROJECT    shift e prosecuzione allo stato 32
    RENAME     shift e prosecuzione allo stato 33
    SELECT     shift e prosecuzione allo stato 34
    STRCONST   shift e prosecuzione allo stato 35
    UPDATE     shift e prosecuzione allo stato 36
    '('        shift e prosecuzione allo stato 37
    '-'        shift e prosecuzione allo stato 38
    '{'        shift e prosecuzione allo stato 39

    factor        prosecuzione allo stato 99
    unary_op      prosecuzione allo stato 45
    project_op    prosecuzione allo stato 46
    select_op     prosecuzione allo stato 47
    exists_op     prosecuzione allo stato 48
    all_op        prosecuzione allo stato 49
    update_op     prosecuzione allo stato 50
    extend_op     prosecuzione allo stato 51
    rename_op     prosecuzione allo stato 52
    const         prosecuzione allo stato 53
    atomic_const  prosecuzione allo stato 54
    table_const   prosecuzione allo stato 55


stato 46

   52 unary_op: project_op .

    $default  riduzione con la regola 52 (unary_op)


stato 47

   53 unary_op: select_op .

    $default  riduzione con la regola 53 (unary_op)


stato 48

   54 unary_op: exists_op .

    $default  riduzione con la regola 54 (unary_op)


stato 49

   55 unary_op: all_op .

    $default  riduzione con la regola 55 (unary_op)


stato 50

   56 unary_op: update_op .

    $default  riduzione con la regola 56 (unary_op)


stato 51

   57 unary_op: extend_op .

    $default  riduzione con la regola 57 (unary_op)


stato 52

   58 unary_op: rename_op .

    $default  riduzione con la regola 58 (unary_op)


stato 53

   49 factor: const .

    $default  riduzione con la regola 49 (factor)


stato 54

   69 const: atomic_const .

    $default  riduzione con la regola 69 (const)


stato 55

   70 const: table_const .

    $default  riduzione con la regola 70 (const)


stato 56

   89 specifier: '[' . expr ']'

    ALL        shift e prosecuzione allo stato 25
    BOOLCONST  shift e prosecuzione allo stato 26
    EXISTS     shift e prosecuzione allo stato 27
    EXTEND     shift e prosecuzione allo stato 28
    ID         shift e prosecuzione allo stato 29
    INTCONST   shift e prosecuzione allo stato 30
    NOT        shift e prosecuzione allo stato 31
    PROJECT    shift e prosecuzione allo stato 32
    RENAME     shift e prosecuzione allo stato 33
    SELECT     shift e prosecuzione allo stato 34
    STRCONST   shift e prosecuzione allo stato 35
    UPDATE     shift e prosecuzione allo stato 36
    '('        shift e prosecuzione allo stato 37
    '-'        shift e prosecuzione allo stato 38
    '{'        shift e prosecuzione allo stato 39

    expr          prosecuzione allo stato 100
    bool_term     prosecuzione allo stato 41
    comp_term     prosecuzione allo stato 42
    low_term      prosecuzione allo stato 43
    factor        prosecuzione allo stato 44
    unary_op      prosecuzione allo stato 45
    project_op    prosecuzione allo stato 46
    select_op     prosecuzione allo stato 47
    exists_op     prosecuzione allo stato 48
    all_op        prosecuzione allo stato 49
    update_op     prosecuzione allo stato 50
    extend_op     prosecuzione allo stato 51
    rename_op     prosecuzione allo stato 52
    const         prosecuzione allo stato 53
    atomic_const  prosecuzione allo stato 54
    table_const   prosecuzione allo stato 55


stato 57

   88 read_stat: READ specifier . ID

    ID  shift e prosecuzione allo stato 101


stato 58

   19 table_type: TABLE '(' . attr_list ')'

    BOOLEAN  shift e prosecuzione allo stato 3
    INTEGER  shift e prosecuzione allo stato 6
    STRING   shift e prosecuzione allo stato 8

    atomic_type  prosecuzione allo stato 102
    attr_list    prosecuzione allo stato 103
    attr_decl    prosecuzione allo stato 104


stato 59

   25 expr: expr . bool_op bool_term
   87 while_stat: WHILE expr . DO stat_list END

    AND  shift e prosecuzione allo stato 80
    DO   shift e prosecuzione allo stato 105
    OR   shift e prosecuzione allo stato 81

    bool_op  prosecuzione allo stato 83


stato 60

   91 write_stat: WRITE specifier . expr

    ALL        shift e prosecuzione allo stato 25
    BOOLCONST  shift e prosecuzione allo stato 26
    EXISTS     shift e prosecuzione allo stato 27
    EXTEND     shift e prosecuzione allo stato 28
    ID         shift e prosecuzione allo stato 29
    INTCONST   shift e prosecuzione allo stato 30
    NOT        shift e prosecuzione allo stato 31
    PROJECT    shift e prosecuzione allo stato 32
    RENAME     shift e prosecuzione allo stato 33
    SELECT     shift e prosecuzione allo stato 34
    STRCONST   shift e prosecuzione allo stato 35
    UPDATE     shift e prosecuzione allo stato 36
    '('        shift e prosecuzione allo stato 37
    '-'        shift e prosecuzione allo stato 38
    '{'        shift e prosecuzione allo stato 39

    expr          prosecuzione allo stato 106
    bool_term     prosecuzione allo stato 41
    comp_term     prosecuzione allo stato 42
    low_term      prosecuzione allo stato 43
    factor        prosecuzione allo stato 44
    unary_op      prosecuzione allo stato 45
    project_op    prosecuzione allo stato 46
    select_op     prosecuzione allo stato 47
    exists_op     prosecuzione allo stato 48
    all_op        prosecuzione allo stato 49
    update_op     prosecuzione allo stato 50
    extend_op     prosecuzione allo stato 51
    rename_op     prosecuzione allo stato 52
    const         prosecuzione allo stato 53
    atomic_const  prosecuzione allo stato 54
    table_const   prosecuzione allo stato 55


stato 61

    1 program: PROGRAM stat_list END .

    $default  riduzione con la regola 1 (program)


stato 62

    2 stat_list: stat ';' . stat_list

    BOOLEAN  shift e prosecuzione allo stato 3
    ID       shift e prosecuzione allo stato 4
    IF       shift e prosecuzione allo stato 5
    INTEGER  shift e prosecuzione allo stato 6
    READ     shift e prosecuzione allo stato 7
    STRING   shift e prosecuzione allo stato 8
    TABLE    shift e prosecuzione allo stato 9
    WHILE    shift e prosecuzione allo stato 10
    WRITE    shift e prosecuzione allo stato 11

    stat_list    prosecuzione allo stato 107
    stat         prosecuzione allo stato 13
    def_stat     prosecuzione allo stato 14
    type         prosecuzione allo stato 15
    atomic_type  prosecuzione allo stato 16
    table_type   prosecuzione allo stato 17
    assign_stat  prosecuzione allo stato 18
    if_stat      prosecuzione allo stato 19
    while_stat   prosecuzione allo stato 20
    read_stat    prosecuzione allo stato 21
    write_stat   prosecuzione allo stato 22


stato 63

   12 id_list: ID . @1 ',' id_list
   13        | ID .

    ','       riduzione con la regola 11 (@1)
    $default  riduzione con la regola 13 (id_list)

    @1  prosecuzione allo stato 108


stato 64

   10 def_stat: type id_list .

    $default  riduzione con la regola 10 (def_stat)


stato 65

   24 assign_stat: ID @2 '=' . expr

    ALL        shift e prosecuzione allo stato 25
    BOOLCONST  shift e prosecuzione allo stato 26
    EXISTS     shift e prosecuzione allo stato 27
    EXTEND     shift e prosecuzione allo stato 28
    ID         shift e prosecuzione allo stato 29
    INTCONST   shift e prosecuzione allo stato 30
    NOT        shift e prosecuzione allo stato 31
    PROJECT    shift e prosecuzione allo stato 32
    RENAME     shift e prosecuzione allo stato 33
    SELECT     shift e prosecuzione allo stato 34
    STRCONST   shift e prosecuzione allo stato 35
    UPDATE     shift e prosecuzione allo stato 36
    '('        shift e prosecuzione allo stato 37
    '-'        shift e prosecuzione allo stato 38
    '{'        shift e prosecuzione allo stato 39

    expr          prosecuzione allo stato 109
    bool_term     prosecuzione allo stato 41
    comp_term     prosecuzione allo stato 42
    low_term      prosecuzione allo stato 43
    factor        prosecuzione allo stato 44
    unary_op      prosecuzione allo stato 45
    project_op    prosecuzione allo stato 46
    select_op     prosecuzione allo stato 47
    exists_op     prosecuzione allo stato 48
    all_op        prosecuzione allo stato 49
    update_op     prosecuzione allo stato 50
    extend_op     prosecuzione allo stato 51
    rename_op     prosecuzione allo stato 52
    const         prosecuzione allo stato 53
    atomic_const  prosecuzione allo stato 54
    table_const   prosecuzione allo stato 55


stato 66

   63 all_op: ALL '[' . expr ']'

    ALL        shift e prosecuzione allo stato 25
    BOOLCONST  shift e prosecuzione allo stato 26
    EXISTS     shift e prosecuzione allo stato 27
    EXTEND     shift e prosecuzione allo stato 28
    ID         shift e prosecuzione allo stato 29
    INTCONST   shift e prosecuzione allo stato 30
    NOT        shift e prosecuzione allo stato 31
    PROJECT    shift e prosecuzione allo stato 32
    RENAME     shift e prosecuzione allo stato 33
    SELECT     shift e prosecuzione allo stato 34
    STRCONST   shift e prosecuzione allo stato 35
    UPDATE     shift e prosecuzione allo stato 36
    '('        shift e prosecuzione allo stato 37
    '-'        shift e prosecuzione allo stato 38
    '{'        shift e prosecuzione allo stato 39

    expr          prosecuzione allo stato 110
    bool_term     prosecuzione allo stato 41
    comp_term     prosecuzione allo stato 42
    low_term      prosecuzione allo stato 43
    factor        prosecuzione allo stato 44
    unary_op      prosecuzione allo stato 45
    project_op    prosecuzione allo stato 46
    select_op     prosecuzione allo stato 47
    exists_op     prosecuzione allo stato 48
    all_op        prosecuzione allo stato 49
    update_op     prosecuzione allo stato 50
    extend_op     prosecuzione allo stato 51
    rename_op     prosecuzione allo stato 52
    const         prosecuzione allo stato 53
    atomic_const  prosecuzione allo stato 54
    table_const   prosecuzione allo stato 55


stato 67

   62 exists_op: EXISTS '[' . expr ']'

    ALL        shift e prosecuzione allo stato 25
    BOOLCONST  shift e prosecuzione allo stato 26
    EXISTS     shift e prosecuzione allo stato 27
    EXTEND     shift e prosecuzione allo stato 28
    ID         shift e prosecuzione allo stato 29
    INTCONST   shift e prosecuzione allo stato 30
    NOT        shift e prosecuzione allo stato 31
    PROJECT    shift e prosecuzione allo stato 32
    RENAME     shift e prosecuzione allo stato 33
    SELECT     shift e prosecuzione allo stato 34
    STRCONST   shift e prosecuzione allo stato 35
    UPDATE     shift e prosecuzione allo stato 36
    '('        shift e prosecuzione allo stato 37
    '-'        shift e prosecuzione allo stato 38
    '{'        shift e prosecuzione allo stato 39

    expr          prosecuzione allo stato 111
    bool_term     prosecuzione allo stato 41
    comp_term     prosecuzione allo stato 42
    low_term      prosecuzione allo stato 43
    factor        prosecuzione allo stato 44
    unary_op      prosecuzione allo stato 45
    project_op    prosecuzione allo stato 46
    select_op     prosecuzione allo stato 47
    exists_op     prosecuzione allo stato 48
    all_op        prosecuzione allo stato 49
    update_op     prosecuzione allo stato 50
    extend_op     prosecuzione allo stato 51
    rename_op     prosecuzione allo stato 52
    const         prosecuzione allo stato 53
    atomic_const  prosecuzione allo stato 54
    table_const   prosecuzione allo stato 55


stato 68

   67 extend_op: EXTEND '[' . atomic_type ID @4 '=' expr ']'

    BOOLEAN  shift e prosecuzione allo stato 3
    INTEGER  shift e prosecuzione allo stato 6
    STRING   shift e prosecuzione allo stato 8

    atomic_type  prosecuzione allo stato 112


stato 69

   60 project_op: PROJECT '[' . id_list ']'

    ID  shift e prosecuzione allo stato 63

    id_list  prosecuzione allo stato 113


stato 70

   68 rename_op: RENAME '[' . id_list ']'

    ID  shift e prosecuzione allo stato 63

    id_list  prosecuzione allo stato 114


stato 71

   61 select_op: SELECT '[' . expr ']'

    ALL        shift e prosecuzione allo stato 25
    BOOLCONST  shift e prosecuzione allo stato 26
    EXISTS     shift e prosecuzione allo stato 27
    EXTEND     shift e prosecuzione allo stato 28
    ID         shift e prosecuzione allo stato 29
    INTCONST   shift e prosecuzione allo stato 30
    NOT        shift e prosecuzione allo stato 31
    PROJECT    shift e prosecuzione allo stato 32
    RENAME     shift e prosecuzione allo stato 33
    SELECT     shift e prosecuzione allo stato 34
    STRCONST   shift e prosecuzione allo stato 35
    UPDATE     shift e prosecuzione allo stato 36
    '('        shift e prosecuzione allo stato 37
    '-'        shift e prosecuzione allo stato 38
    '{'        shift e prosecuzione allo stato 39

    expr          prosecuzione allo stato 115
    bool_term     prosecuzione allo stato 41
    comp_term     prosecuzione allo stato 42
    low_term      prosecuzione allo stato 43
    factor        prosecuzione allo stato 44
    unary_op      prosecuzione allo stato 45
    project_op    prosecuzione allo stato 46
    select_op     prosecuzione allo stato 47
    exists_op     prosecuzione allo stato 48
    all_op        prosecuzione allo stato 49
    update_op     prosecuzione allo stato 50
    extend_op     prosecuzione allo stato 51
    rename_op     prosecuzione allo stato 52
    const         prosecuzione allo stato 53
    atomic_const  prosecuzione allo stato 54
    table_const   prosecuzione allo stato 55


stato 72

   65 update_op: UPDATE '[' . ID @3 '=' expr ']'

    ID  shift e prosecuzione allo stato 116


stato 73

   25 expr: expr . bool_op bool_term
   47 factor: '(' expr . ')'

    AND  shift e prosecuzione allo stato 80
    OR   shift e prosecuzione allo stato 81
    ')'  shift e prosecuzione allo stato 117

    bool_op  prosecuzione allo stato 83


stato 74

   79 tuple_const: '(' . atomic_const_list ')'

    BOOLCONST  shift e prosecuzione allo stato 26
    INTCONST   shift e prosecuzione allo stato 30
    STRCONST   shift e prosecuzione allo stato 35

    atomic_const       prosecuzione allo stato 118
    atomic_const_list  prosecuzione allo stato 119


stato 75

   82 atomic_type_list: atomic_type . ',' atomic_type_list
   83                 | atomic_type .

    ','  shift e prosecuzione allo stato 120
